# theon

./: .gitignore  Cargo.toml  README.md  rustdoc.sh
.github/workflows/: continuous-integration.yml
eudoxus/: Cargo.toml
eudoxus/src/: adjunct.rs  lib.rs  primitive.rs  space.rs
eudoxus/src/integration/: cgmath.rs  mint.rs  mod.rs  nalgebra.rs
src/: adjunct.rs  array.rs  cgmath.rs  convert.rs  lapack.rs  lib.rs  mint.rs  nalgebra.rs  ngon.rs  ops.rs  query.rs  space.rs
src/integration/: cgmath.rs  glam.rs  mint.rs  mod.rs  nalgebra.rs  ultraviolet.rs
src/partition/: mod.rs  ncube.rs
theon/: Cargo.toml
theon/src/: lib.rs
