[package]
name = "theon"
version = "0.0.1"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Abstraction of Euclidean spaces."
repository = "https://github.com/olson-sean-k/theon"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
keywords = [
    "geometry",
    "graphics",
    "math",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# Enable all features so that trait implementations for types from commonly used
# crates are shown.
all-features = true
# Enable KaTex support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default = ["geometry-nalgebra"]
geometry-cgmath = ["dep:cgmath"]
geometry-glam = ["dep:glam"]
geometry-mint = ["dep:mint"]
geometry-nalgebra = ["dep:nalgebra"]
geometry-ultraviolet = ["dep:ultraviolet"]
lapack = [
    "dep:ndarray",
    "dep:ndarray-linalg",
]

[dependencies]
approx = "^0.5.0"
decorum = "^0.4.0"
itertools = "^0.13.0"
num = "^0.4.0"
typenum = "^1.17.0"

# Integrations.

[dependencies.cgmath]
version = "^0.17.0"
optional = true

[dependencies.glam]
version = "^0.9.0"
optional = true

[dependencies.mint]
version = "^0.5.0"
optional = true

[dependencies.nalgebra]
version = "^0.22.0"
optional = true

[dependencies.ultraviolet]
version = "^0.6.0"
optional = true

# Platform-specific features.

[target.'cfg(target_arch = "x86_64")'.dependencies.ndarray]
version = "^0.15.0"
optional = true

[target.'cfg(target_arch = "x86_64")'.dependencies.ndarray-linalg]
version = "^0.16.0"
features = ["intel-mkl-static"]
optional = true

[dev-dependencies]
nalgebra = "^0.22.0"
