[package]
name = "theon"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Abstraction of Euclidean spaces."
repository = "https://github.com/olson-sean-k/theon"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
keywords = [
    "euclidean",
    "geometry",
    "linear",
]
categories = [
    "graphics",
    "mathematics",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# Enable all features so that trait implementations for types from commonly used
# crates are shown.
all-features = true
# Enable KaTex support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default = ["nalgebra"]
lapack = [
    "dep:ndarray",
    "dep:ndarray-linalg",
]

# Integrations.
cgmath = ["dep:cgmath"]
glam = ["dep:glam"]
mint = ["dep:mint"]
nalgebra = ["dep:nalgebra"]
ultraviolet = ["dep:ultraviolet"]

[dependencies]
approx = "^0.5.0"
decorum = "^0.4.0"
itertools = "^0.14.0"
num-traits = "^0.2.19"
typenum = "^1.18.0"

# Integrations.

[dependencies.cgmath]
version = "^0.18.0"
optional = true

[dependencies.glam]
version = "^0.30.0"
optional = true

[dependencies.mint]
version = "^0.5.0"
optional = true

[dependencies.nalgebra]
version = "^0.34.0"
optional = true

[dependencies.ultraviolet]
version = "^0.10.0"
optional = true

# Platform-specific features.

[target.'cfg(target_arch = "x86_64")'.dependencies.ndarray]
version = "^0.15.0"
optional = true

[target.'cfg(target_arch = "x86_64")'.dependencies.ndarray-linalg]
version = "^0.16.0"
features = ["intel-mkl-static"]
optional = true

[dev-dependencies]
nalgebra = "^0.34.0"
