[package]
name = "eudoxus"
description = "Abstraction of Euclidean spaces."
keywords = ["geometry", "graphics", "math"]
version = "0.0.1"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/olson-sean-k/theon"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# Enable all features so that trait implementations for types from commonly used
# crates are shown.
all-features = true
# Enable KaTex support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default = []
geometry-cgmath = ["cgmath"]
geometry-glam = ["glam"]
geometry-mint = ["mint"]
geometry-nalgebra = ["nalgebra"]
geometry-ultraviolet = ["ultraviolet"]

[dependencies]
num-traits = "^0.2.0"
typenum = "^1.13.0"

# Integrations.
cgmath = { version = "=0.18.0", optional = true }
glam = { version = "=0.17.1", optional = true }
mint = { version = "=0.5.6", optional = true }
nalgebra = { version = "=0.28.0", optional = true }
ultraviolet = { version = "=0.8.1", optional = true }

[dev-dependencies]
nalgebra = "^0.22.0"
