[package]
name = "eudoxus"
version = "0.0.1"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Abstraction of Euclidean spaces."
repository = "https://github.com/olson-sean-k/theon"
readme = "../README.md"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
keywords = [
    "geometry",
    "graphics",
    "math",
    "matrix",
    "vector",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# Enable all features so that trait implementations for types from commonly used
# crates are shown.
all-features = true
# Enable KaTex support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default = []
geometry-cgmath = [
    "dep:arrayvec",
    "dep:cgmath",
]
geometry-glam = [
    "dep:arrayvec",
    "dep:glam",
]
geometry-mint = [
    "dep:arrayvec",
    "dep:mint",
]
geometry-nalgebra = [
    "dep:arrayvec",
    "dep:nalgebra",
]
geometry-ultraviolet = [
    "dep:arrayvec",
    "dep:ultraviolet",
]

[dependencies]
num-traits = "^0.2.0"
typenum = "^1.13.0"

[dependencies.arrayvec]
version = "^0.7.0"
optional = true

# Integrations.

[dependencies.cgmath]
version = "=0.18.0"
optional = true

[dependencies.glam]
version = "=0.17.1"
optional = true

[dependencies.mint]
version = "=0.5.6"
optional = true

[dependencies.nalgebra]
version = "=0.28.0"
optional = true

[dependencies.ultraviolet]
version = "=0.8.1"
optional = true

[dev-dependencies]
nalgebra = "^0.22.0"
